--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <div class="imagen">
 	<nav>
 	   	 <ul>
-		    <li><a href="file:///C:/Users/Admin/Downloads/Sublime/Maquetacion/maqutacion.html">Maquetado 1</a>
+		    <li><a href="Paginas/Maquetacion/maqutacion.html">Maquetado 1</a>
 		     </li>
 
-		    <li><a href="file:///C:/Users/Admin/Downloads/Sublime/Maqueta/Maqueta.html">Maquetado 2</a></li>
-			<li><a href="file:///C:/Users/Admin/Downloads/Sublime/maquetas/maquetas.html">Maquetado 3</a></li>
+		    <li><a href="Paginas/Maqueta/Maqueta.html">Maquetado 2</a></li>
+			<li><a href="Paginas/maquetas/maquetas.html">Maquetado 3</a></li>
 		</ul>
 		</nav>
 <img src="Skewed.png">	
